# WPGhostWriter

./: SingleApp.tsx  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_interval_seconds.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  models.rs  settings.rs  sites.rs  tasks.rs  usage.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/engine/: mod.rs  task_runner.rs
src-tauri/src/models/: mod.rs  post.rs  settings.rs  site.rs  task.rs  usage.rs
src-tauri/src/services/: mod.rs  openrouter.rs  usage_tracker.rs  wordpress.rs
src/components/dashboard/: Dashboard.tsx  StatsOverview.tsx  TaskCard.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: ApiSettings.tsx  ModelSelector.tsx  SettingsPanel.tsx  SystemPromptEditor.tsx
src/components/sites/: SiteConnectionForm.tsx  SiteManager.tsx
src/components/tasks/: TaskCreator.tsx  TaskDetail.tsx  TaskEditor.tsx  TaskList.tsx
src/components/ui/: Badge.tsx  Button.tsx  Checkbox.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  Toast.tsx
src/components/usage/: CostChart.tsx  TokenBreakdown.tsx  UsageDashboard.tsx
src/hooks/: useTaskEvents.ts  useTauriCommand.ts
src/lib/: tauri.ts  utils.ts
src/stores/: settingsStore.ts  siteStore.ts  taskStore.ts  usageStore.ts
src/types/: index.ts
