[package]
name = "wpghostwriter"
version = "0.1.0"
description = "WPGhostWriter — AI-powered WordPress content automation"
authors = ["WPGhostWriter"]
edition = "2021"

[lib]
name = "wpghostwriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["full"] }
dashmap = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
aes-gcm = "0.10"
rand = "0.8"
once_cell = "1"

